--- a/index.html
+++ b/index.html
@@ -26,14 +26,18 @@
             <div class="img">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit, perferendis sint.</p>
             </div>
-            <div class="sidebar"><p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum harum quos ipsa earum delectus neque consectetur veniam architecto voluptates sint dolorum dicta commodi excepturi
-            </p> </div>
-            <section>
-            <h2>Welcome</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem quidem fugiat nobis iure optio ipsum dolores provident inventore rerum tempora quae dicta iusto quo repellat vitae ab, excepturi repellendus recusandae!
-            Atque laudantium reiciendis praesentium saepe fuga esse consequatur nam perspiciatis amet quo eum rerum tempore iure
-            .</p>
-            </section>
+            <div class="outside">
+                <div class="sidebar"><p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum harum quos ipsa earum delectus neque consectetur veniam architecto voluptates sint dolorum dicta commodi excepturi
+                </p> </div>
+            </div>
+            <div class="outsection">
+                <section>
+                    <h2>Welcome</h2>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem quidem fugiat nobis iure optio ipsum dolores provident inventore rerum tempora quae dicta iusto quo repellat vitae ab, excepturi repellendus recusandae!
+                    Atque laudantium reiciendis praesentium saepe fuga esse consequatur nam perspiciatis amet quo eum rerum tempore iure
+                    .</p>
+                </section>
+            </div>
         </main>
 
         <footer> <span>Copyring &copy; 2022 My Website</span> </footer>
